--- a/HomeManager/View/Personen/ucPersoon.xaml
+++ b/HomeManager/View/Personen/ucPersoon.xaml
@@ -64,7 +64,7 @@
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="auto" />
                     <ColumnDefinition Width="auto" />
-                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="140" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
