--- a/HomeManager/View/Budget/ucBegunstigden.xaml
+++ b/HomeManager/View/Budget/ucBegunstigden.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="HomeManager.View.ucCategorie"
+    x:Class="HomeManager.View.ucBegunstigden"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:Helpers="clr-namespace:HomeManager.Helpers"
@@ -11,7 +11,7 @@
     d:DesignWidth="800"
     Background="{StaticResource myBackground}"
     mc:Ignorable="d">
-    <Grid DataContext="{Binding Source={StaticResource VML}, Path=CategorieViewModel}">
+    <Grid DataContext="{Binding Source={StaticResource VML}, Path=BegunstigdenViewModel}">
         <Grid.RowDefinitions>
             <RowDefinition Height="50" />
             <RowDefinition Height="*" />
@@ -40,7 +40,7 @@
                         VerticalAlignment="Center"
                         FontSize="20"
                         Foreground="White"
-                        Text="Budget Categorie" />
+                        Text="Begunstigde" />
 
                 </StackPanel>
                 <uc:ucWerkBalk HorizontalAlignment="Right" VerticalAlignment="Top" />
@@ -73,9 +73,8 @@
                     <RowDefinition Height="*" />
 
                 </Grid.RowDefinitions>
-
                 <ListBox
-                Name="BudgetCategorieListView"
+                Name="BegunstigdeListView"
                 Grid.Row="1"
                 Grid.RowSpan="5"
                 Grid.Column="1"
@@ -89,21 +88,40 @@
                 <Label
                 Grid.Row="1"
                 Grid.Column="3"
+                HorizontalAlignment="Right"
                 HorizontalContentAlignment="Right"
-                Content="Budget Categorie"
+                Content="Begunstigde"
                 Foreground="#024f87" />
                 <TextBox
-                x:Name="txtBudgetCategorie"
+                x:Name="txtBegunstigde"
                 Grid.Row="1"
                 Grid.Column="4"
                 Width="200"
                 Margin="5"
                 Background="White"
                 Foreground="#024f87"
-                Text="{Binding MijnSelectedItem.BudgetCategorie, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
+                Text="{Binding MijnSelectedItem.Begunstigde, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
+                <Label
+                x:Name="Opmerking"
+                Grid.Row="2"
+                Grid.Column="3"
+                HorizontalContentAlignment="Right"
+                Content="Opmerking"
+                Foreground="#024f87" />
+                <TextBox
+                Grid.Row="2"
+                Grid.Column="4"
+                Width="200"
+                Height="100"
+                Margin="5"
+                VerticalAlignment="Center"
+                Background="White"
+                Foreground="#024f87"
+                Text="{Binding MijnSelectedItem.Opmerking, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
 
 
             </Grid>
         </Border>
+
     </Grid>
 </UserControl>
