--- a/HomeManager/View/Budget/ucFrequentie.xaml
+++ b/HomeManager/View/Budget/ucFrequentie.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="HomeManager.View.ucCategorie"
+    x:Class="HomeManager.View.ucFrequentie"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:Helpers="clr-namespace:HomeManager.Helpers"
@@ -11,7 +11,7 @@
     d:DesignWidth="800"
     Background="{StaticResource myBackground}"
     mc:Ignorable="d">
-    <Grid DataContext="{Binding Source={StaticResource VML}, Path=CategorieViewModel}">
+    <Grid DataContext="{Binding Source={StaticResource VML}, Path=FrequentieViewModel}">
         <Grid.RowDefinitions>
             <RowDefinition Height="50" />
             <RowDefinition Height="*" />
@@ -40,7 +40,7 @@
                         VerticalAlignment="Center"
                         FontSize="20"
                         Foreground="White"
-                        Text="Budget Categorie" />
+                        Text="Budget Frequentie" />
 
                 </StackPanel>
                 <uc:ucWerkBalk HorizontalAlignment="Right" VerticalAlignment="Top" />
@@ -75,7 +75,7 @@
                 </Grid.RowDefinitions>
 
                 <ListBox
-                Name="BudgetCategorieListView"
+                Name="Frequentie"
                 Grid.Row="1"
                 Grid.RowSpan="5"
                 Grid.Column="1"
@@ -89,21 +89,23 @@
                 <Label
                 Grid.Row="1"
                 Grid.Column="3"
+                HorizontalAlignment="Right"
                 HorizontalContentAlignment="Right"
-                Content="Budget Categorie"
-                Foreground="#024f87" />
+                Foreground="#024f87"
+                Content="Budget Frequentie" />
                 <TextBox
-                x:Name="txtBudgetCategorie"
+                x:Name="txtFrequentie"
                 Grid.Row="1"
                 Grid.Column="4"
                 Width="200"
                 Margin="5"
-                Background="White"
                 Foreground="#024f87"
-                Text="{Binding MijnSelectedItem.BudgetCategorie, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
+                Background="White"
+                Text="{Binding MijnSelectedItem.Frequentie, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
 
 
             </Grid>
         </Border>
+
     </Grid>
 </UserControl>
