--- a/HomeManager/View/Security/winLogin.xaml
+++ b/HomeManager/View/Security/winLogin.xaml
@@ -2,15 +2,20 @@
     x:Class="HomeManager.View.Security.winLogin"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:Helpers="clr-namespace:HomeManager.Helpers"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:local="clr-namespace:HomeManager.View.Security"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="Login"
     Width="700"
     Height="300"
     Background="{StaticResource myBackground}"
+    FocusManager.FocusedElement="{Binding ElementName=txtLogin}"
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
+
+
     <Grid DataContext="{Binding Source={StaticResource VML}, Path=LoginViewModel}">
         <Grid.RowDefinitions>
             <RowDefinition Height="60" />
@@ -68,6 +73,7 @@
                     Content="Login" />
 
                 <TextBox
+                    x:Name="txtLogin"
                     Grid.Row="1"
                     Grid.Column="2"
                     Width="150"
@@ -83,11 +89,16 @@
                     Content="Wachtwoord" />
 
                 <TextBox
+                    x:Name="txtWachtwoord"
                     Grid.Row="2"
                     Grid.Column="2"
                     Width="150"
                     Height="18"
-                    Text="{Binding Wachtwoord, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                    Text="{Binding Wachtwoord, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+
+                </TextBox>
+
+
 
                 <StackPanel
                     Grid.Row="3"
@@ -98,19 +109,19 @@
                     Orientation="Horizontal">
                     <Button
                         Margin="3"
-                           Command="{Binding cmdLogin}"
-                         CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}"
                         Padding="5,0,5,0"
+                        Command="{Binding cmdLogin}"
+                        CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}"
                         Content="Inloggen" />
                     <Button
                         Margin="3"
-                        Command="{Binding cmdAnnuleer}"
                         Padding="5,0,5,0"
+                        Command="{Binding cmdAnnuleer}"
                         Content="Annuleren" />
                     <Button
                         Margin="3"
-                        Command="{Binding cmdClose}"
                         Padding="5,0,5,0"
+                        Command="{Binding cmdClose}"
                         Content="Sluiten" />
                 </StackPanel>
 
