--- a/HomeManager/View/ToDo/ucCategorieën.xaml
+++ b/HomeManager/View/ToDo/ucCategorieën.xaml
@@ -1,5 +1,5 @@
-﻿<UserControl
-    x:Class="HomeManager.View.ucCollecties"
+<UserControl
+    x:Class="HomeManager.View.ucCategorieën"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -10,7 +10,7 @@
     d:DesignWidth="800"
     Background="{StaticResource myBackground}"
     mc:Ignorable="d">
-    <Grid DataContext="{Binding Source={StaticResource VML}, Path=CollectiesViewModel}">
+    <Grid DataContext="{Binding Source={StaticResource VML}, Path=CategorieënViewModel}">
         <Grid.RowDefinitions>
             <RowDefinition Height="50" />
             <RowDefinition Height="*" />
@@ -38,7 +38,7 @@
                         VerticalAlignment="Center"
                         FontSize="20"
                         Foreground="White"
-                        Text="Todo Collecties" />
+                        Text="Todo Categorieën" />
                 </StackPanel>
                 <uc:ucWerkBalk
                     HorizontalAlignment="Right"
@@ -59,7 +59,8 @@
             <Border Grid.Column="0">
                 <ListBox
                     Margin="5"
-                    Name="TodoCollectionsListBox">
+                    Name="TodoCategoriesListBox"
+                    >
                 </ListBox>
             </Border>
 
@@ -68,9 +69,9 @@
                 Grid.Column="1"
                 Margin="15,0,0,0"
                 Orientation="Vertical">
-                <TextBlock Text="Collectie" />
+                <TextBlock Text="Categorie" />
                 <TextBox
-                    Name="ToDoCollectionsTextBox"
+                    Name="ToDoCategoriesTextBox"
                     Height="30"
                     Text=""
                     Padding="5" />
