--- a/HomeManager/MainWindow.xaml
+++ b/HomeManager/MainWindow.xaml
@@ -72,6 +72,7 @@
         <V:ucTitlePerson
             Grid.ColumnSpan="2"
             Margin="0,0,10,0"
+            Width="120"
             HorizontalAlignment="Right"
             VerticalAlignment="Center" />
 
