--- a/HomeManager/View/ucTitlePerson.xaml
+++ b/HomeManager/View/ucTitlePerson.xaml
@@ -3,10 +3,11 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:local="clr-namespace:HomeManager.View"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DesignHeight="50"
-    d:DesignWidth="120"
+    d:DesignWidth="150"
     Background="{StaticResource myTitleBar}"
     mc:Ignorable="d">
     <Grid DataContext="{Binding Source={StaticResource VML}, Path=TitlePersonViewModel}">
@@ -26,6 +27,22 @@
             <Ellipse.Fill>
                 <ImageBrush ImageSource="{Binding LoginModel.Foto, TargetNullValue={x:Null}}" Stretch="UniformToFill" />
             </Ellipse.Fill>
+
+            <Ellipse.ContextMenu>
+                <ContextMenu>
+                    <MenuItem
+                        Command="{Binding cmdAfmelden}"
+                        CommandParameter="{Binding PlacementTarget, RelativeSource={RelativeSource AncestorType=ContextMenu}}"
+                        Header="Afmelden" />
+                    <MenuItem Header="Mijn Info" />
+                    <MenuItem Header="Ontgrendel een computer" />
+                    <MenuItem Header="Back-up maken" />
+                    <MenuItem Header="Logs raadplegen" />
+                    <MenuItem Header="Exceptions raadplegen" />
+                    <MenuItem Header="Exception emails beheren" />
+                </ContextMenu>
+            </Ellipse.ContextMenu>
+
         </Ellipse>
         <Border
             Grid.Column="0"
@@ -44,11 +61,11 @@
             <TextBlock
                 FontSize="12"
                 Foreground="White"
-                 Text="{Binding LoginModel.VoorNaam, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                Text="{Binding LoginModel.VoorNaam, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
             <TextBlock
                 FontSize="10"
                 Foreground="White"
-               Text="{Binding LoginModel.Naam, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                Text="{Binding LoginModel.Naam, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
             <TextBlock
                 FontSize="8"
                 Foreground="White"
