Layout met Add edit en delete knop toegevoegd

--- a/HomeManager/Resources/StylesDictionary.xaml
+++ b/HomeManager/Resources/StylesDictionary.xaml
@@ -151,6 +151,8 @@
         </Style.Triggers>
     </Style>
 
+
+
     <Style x:Key="AddImagePersoon" TargetType="ContentControl">
         <Setter Property="Margin" Value="5" />
         <Setter Property="Cursor" Value="Hand" />
@@ -186,7 +188,7 @@
         </Style.Triggers>
     </Style>
 
-    <Style x:Key="DeleteImage" TargetType="ContentControl">
+    <Style x:Key="EditPersoon" TargetType="ContentControl">
         <Setter Property="Margin" Value="5" />
         <Setter Property="Cursor" Value="Hand" />
         <Style.Triggers>
@@ -194,13 +196,10 @@
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="ContentControl">
-                            <Border Background="{StaticResource myTitleBar}">
+                            <Border Background="{StaticResource myBackground}">
                                 <Path
-                                    Width="15"
-                                    Height="15"
-                                    Margin="0,0,0,0"
-                                    Data="{StaticResource myDeleteButton}"
-                                    Fill="{StaticResource myWerkBalk}"
+                                    Data="{StaticResource myEditButton}"
+                                    Fill="DarkGray"
                                     RenderTransformOrigin="0.5,0.5"
                                     Stretch="Uniform" />
                             </Border>
@@ -213,10 +212,43 @@
                     <Setter.Value>
                         <ControlTemplate TargetType="ContentControl">
                             <Path
-                                Width="15"
-                                Height="15"
-                                Margin="0,0,0,0"
-                                Data="{StaticResource myDeleteButton}"
+                                Data="{StaticResource myEditButton}"
+                                Fill="{StaticResource myWerkBalkDisable}"
+                                RenderTransformOrigin="0.5,0.5"
+                                Stretch="Uniform" />
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+
+    <Style x:Key="DeletePersoon" TargetType="ContentControl">
+        <Setter Property="Margin" Value="5" />
+        <Setter Property="Cursor" Value="Hand" />
+        <Style.Triggers>
+            <Trigger Property="IsEnabled" Value="True">
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="ContentControl">
+                            <Border Background="{StaticResource myBackground}">
+                                <Path
+                                    Data="{StaticResource myDeletePersoon}"
+                                    Fill="DarkGray"
+                                    RenderTransformOrigin="0.5,0.5"
+                                    Stretch="Uniform" />
+                            </Border>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Trigger>
+            <Trigger Property="IsEnabled" Value="False">
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="ContentControl">
+                            <Path
+                                Data="{StaticResource myDeletePersoon}"
                                 Fill="{StaticResource myWerkBalkDisable}"
                                 RenderTransformOrigin="0.5,0.5"
                                 Stretch="Uniform" />
